# Transformer-From-Scratch

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_trained_model.py  train.py
attention/: __init__.py  masking.py  multi_head_attention.py  scaled_dot_product_attention.py
attention/tests/: test_against_pytorch_mha.py
positional_encoding/: __init__.py  learned_positional_embedding.py  rotary_positional_embedding.py  sinusoidal_positional_encoding.py
scripts/: generate.py  train.py
tokenizer/: charactor_tokenizer.py
transformer_blocks/: __init__.py  feed_forward_network.py  feedforward_networks.py  gpt_decoder_block.py  transformer_decoder_block.py  transformer_encoder_block.py
transformer_blocks/tests/: test_transformer_decoder_pipeline.py  test_transformer_encoder_pipeline.py  test_transformer_shapes.py
transformer_models/: gpt2.py  gpt_decoder_block.py  train.py  transformer_encoder.py
transformer_models/tests/: test_gpt2_generation_stability.py  test_tranformer_encoder_end_to_end.py
