[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transformer-from-scratch"
version = "0.1.0"
description = "A from-scratch transformer implementation with encoder/decoder blocks, attention, and positional encodings."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Transformer From Scratch" }]
dependencies = [
  "torch>=1.13.0",
  "matplotlib>=3.0.0",
  "pytest>=7.0",
]

[project.urls]
homepage = "https://github.com/"
repository = "https://github.com/"
